# opengl-beginner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: gl.h  shader.h
include/glad/: glad.h
include/opengl-module/: gl.h  shader.h
src/: gl.cpp  glad.c  shader.cpp
